Fix alignment issue in section 5 on Safari

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -967,7 +967,9 @@ table {
     font-size: 1.2em;
     text-align: center;
     width: 150%;
-    letter-spacing: -1px; }
+    letter-spacing: -1px;
+    left: 50%;
+    transform: translateX(-50%); }
 
 .footer-alerts {
   color: #e3e3e3;
