--- a/styles/scss/_section-4.scss
+++ b/styles/scss/_section-4.scss
@@ -21,5 +21,7 @@
         text-align: center;
         width: 150%;
         letter-spacing: -1px;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
